			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04b: *********************************

IMP: (10/11/05, SMR) Old outline textures are now used in the new scheme.

BUG: (10/11/05, SMR) Multi-object properties doesn't understand rotated transistors (Bug #626).
FIX: Rotated transistors are handled properly.

BUG: (10/11/05, SMR) Non-centered text on rotated nodes doesn't select properly (Bug #536).
FIX: In Highlighter.findAllInArea(), transform text area after precisely defining it.

BUG: (10/11/05, SMR) Rotated text with multiple lines draws badly (Bug #629).
FIX: Improved location computation, highlighting, and rendering.

IMP: (10/11/05, DN) Simplification of NodeInst and ArcInst ("duplicate" removed, "arcId/nodeId" is used instead).

BUG: (10/10/05, DN) Alignment of text in cross-library copy (Bug #632).
FIX: In CrossLibCopy.showCells use "CellName.compareTo" instead of STRING_NUMBER_COMPARE. 

BUG: (10/10/05, GVG) Correcting poly pin centers. They should be a point, not a rectangle.
FIX: Changing offset in primitive.

BUG: (10/10/05, GVG) Find doesn't work with simple regular expressions (bug #636).
FIX: SelectObject dialog now uses Pattern/Match classes for the regular expression because
String.matches doesn't seem to work.

BUG: (10/10/05, SMR) Spice output fails to instantiate subcells that are replaced by a model file (Bug #637).
FIX: In Topology.Visitor.enterCell(), cache cell information even if being ignored.

BUG: (10/10/05, SMR) Cell-center nodes are not visible in black-background colors (Bug #627).
FIX: The commands to switch color schemes now change the Generic layer colors.

BUG: (10/10/05, SMR) When editing "down in place", scroll bars and arrow keys are wrong (Bug #634).
FIX: Scroll bars fixed in EditWindow.setScrollPositionUnsafe, bottomScrollChanged, and rightScrollChanged.
     Arrow keys fixed in ClickZoomWireListener.moveSelected.
