@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04b: *********************************
 
+IMP/MAN: (10/11/05, SMR) Pad Frame generator now handles view types properly (Bug #621).
+     Also, pad frame generator has a "views" command to specify views to generate.
+
 IMP: (10/11/05, SMR) Old outline textures are now used in the new scheme.
 
 BUG: (10/11/05, SMR) Multi-object properties doesn't understand rotated transistors (Bug #626).
